// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`device list snapshot tests should list devices matching the selected marker with the create device item 1`] = `
<div
  className="device-list-container"
>
  <div
    className="device-list-item-container"
  >
    <div
      className="device-list-item-shadow device-list-item-shadow-left device-list-item-shadow-left-first"
    />
    <div
      className="device-list-item-shadow device-list-item-shadow-right device-list-item-shadow-right-first"
    />
    <img
      alt="device-list-item-image"
      className="device-list-item-image"
      src="test-file-stub"
    />
    <div
      className="device-list-item"
    >
      <p>
        85378
      </p>
      <button
        className="device-list-item-opaque-text"
      >
        deviceReportBroken
      </button>
    </div>
  </div>
  <div
    className="device-list-item-container"
  >
    <div
      className="device-list-item-shadow device-list-item-shadow-left device-list-create-device-item-shadow-left"
    />
    <div
      className="device-list-item-shadow device-list-item-shadow-right device-list-create-device-item-shadow-right"
    />
    <img
      alt="device-list-item-image"
      className="device-list-item-image"
      src="test-file-stub"
    />
    <div
      className="device-list-item"
    >
      <p
        className="device-list-item-opaque-text"
      >
        deviceNoDeviceHere
      </p>
      <button
        data-testid="createDeviceButton"
        onClick={[Function]}
      >
        deviceAddDevice
      </button>
    </div>
  </div>
</div>
`;

exports[`device list snapshot tests should list devices matching the selected marker without the create device item 1`] = `
<div
  className="device-list-container"
>
  <div
    className="device-list-item-container"
  >
    <div
      className="device-list-item-shadow device-list-item-shadow-left device-list-item-shadow-left-first"
    />
    <div
      className="device-list-item-shadow device-list-item-shadow-right device-list-item-shadow-right-first"
    />
    <img
      alt="device-list-item-image"
      className="device-list-item-image"
      src="test-file-stub"
    />
    <div
      className="device-list-item"
    >
      <p>
        85378
      </p>
      <button
        className="device-list-item-opaque-text"
      >
        deviceReportBroken
      </button>
    </div>
  </div>
</div>
`;
